<resources>
    <string name="app_name">Meowsic</string>
    <string name="image_description">illustration</string>
    <!--    Splash screen-->
    <string name="splash_subtitle">Cats love music, you also!</string>
    <string name="to_login">Login</string>
    <string name="to_register">Register</string>
    <!--    Login & Register screen-->
    <string name="email_title">Email*</string>
    <string name="email_placeholder">Enter your email</string>
    <string name="password_title">Password*</string>
    <string name="password_placeholder">Enter your password</string>
    <string name="login_button_title">Login</string>
    <string name="name_title">Name*</string>
    <string name="name_placeholder">Enter your name</string>
    <string name="login_account_title">Don\'t have an account?</string>
    <string name="navigate_to_register">Register here</string>
    <string name="login_title">Login to Meowsic</string>
    <string name="register_title">Register to Meowsic</string>
    <string name="register_button_title">Register</string>
    <string name="register_account_title">Have an account?</string>
    <string name="navigate_to_login">Login here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>